tests/machine/x/go/group_by_sort.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_sort.go:14:14: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:15:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:19:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:23:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:27:3: undefined: ItemsItem
tests/machine/x/go/group_by_sort.go:32:16: undefined: Grouped
tests/machine/x/go/group_by_sort.go:95:16: undefined: Grouped
tests/machine/x/go/group_by_sort.go:97:30: undefined: Grouped
